[package]
name = "htmlq"
description = "Like jq, but for HTML."
categories = ["command-line-utilities"]
keywords = ["CSS", "HTML", "query"]
repository = "https://github.com/mgdm/htmlq"
documentation = "https://github.com/mgdm/htmlq/blob/master/README.md"
readme = "README.md"
license = "MIT"
version = "0.5.0"
authors = ["Michael Maclean <michael@mgdm.net>"]
edition = "2024"
exclude = ["/.github"]

[dependencies]
kuchikiki = "0.8"
html5ever = "0.26.0"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4.0"
url = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
